--- a/wsgi/myproject/template/index.html
+++ b/wsgi/myproject/template/index.html
@@ -105,7 +105,7 @@
      <figure class="effect-oscar  wowload fadeInUp">
         <img src="static/images/portfolio/2.jpg" alt="img01"/>
         <figcaption>
-            <h2>Events</h2>
+            <h2>Prueba</h2>
             <p>Lily likes to play with crayons and pencils<br>
             <a href="static/images/portfolio/2.jpg" title="1" data-gallery>View more</a></p>
         </figcaption>
