--- a/wsgi/myproject/template/index.html
+++ b/wsgi/myproject/template/index.html
@@ -16,7 +16,7 @@
 		<meta property="og:description" content="Contacta con el evento para tu empresa." />
 		<meta property="og:site_name" content="Eventos 2015" />
 
-<title>Cyrus Studio</title>
+<title>{{ titulo }}</title>
 
 <!-- Google fonts  -->
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
