--- a/wsgi/myproject/template/base.html
+++ b/wsgi/myproject/template/base.html
@@ -9,5 +9,16 @@
 {% include 'include/nav.html' %}
 
 
+
+
+{% block contenido %}{% endblock %}
+
+
+
+
+
+
+
+{% include 'include/jquery.html' %}
 </body>
 </html>
