--- a/wsgi/myproject/template/include/nav.html
+++ b/wsgi/myproject/template/include/nav.html
@@ -1,4 +1,7 @@
 <div class="topbar animated fadeInLeftBig"></div>
+<div class="topbar animated fadeInLeftBig"></div>
+<div class="topbar animated fadeInLeftBig"></div>
+
 
 <!-- Header Starts -->
 <div class="navbar-wrapper">
