--- a/wsgi/myproject/template/include/nav.html
+++ b/wsgi/myproject/template/include/nav.html
@@ -27,7 +27,7 @@
               <ul class="nav navbar-nav navbar-right scroll">
                  <li class="active"><a href="#works">Home</a></li>
                  <li ><a href="#about">About</a></li>
-                             <div class="row">
+                     <li>        <div class="row">
                     <a class="btn btn-primary" data-toggle="modal" href="#myModal" >Login</a>
 
                     <div class="modal hide" id="myModal">
@@ -50,6 +50,7 @@
                       </div>
                     </div>
                 </div>
+                  </li>
                  <li ><a href="#contact">Contact</a></li>
               </ul>
             </div>
