--- a/wsgi/myproject/template/include/nav.html
+++ b/wsgi/myproject/template/include/nav.html
@@ -28,7 +28,7 @@
                  <li class="active"><a href="#works">Home</a></li>
                  <li ><a href="#about">About</a></li>
                      <li>        <div class="row">
-                    <a class="btn btn-primary" data-toggle="modal" href="#myModal" >Login</a>
+                    <a class="" data-toggle="modal" href="#myModal" >Login</a>
 
                     <div class="modal hide" id="myModal">
                       <div class="modal-header">
