--- a/wsgi/myproject/template/include/nav.html
+++ b/wsgi/myproject/template/include/nav.html
@@ -27,30 +27,7 @@
               <ul class="nav navbar-nav navbar-right scroll">
                  <li class="active"><a href="#works">Home</a></li>
                  <li ><a href="#about">About</a></li>
-                     <li>        <div class="row">
-                    <a class="" data-toggle="modal" href="#myModal" >Login</a>
-
-                    <div class="modal hide" id="myModal">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">x</button>
-                        <h3>Login to MyWebsite.com</h3>
-                      </div>
-                      <div class="modal-body">
-                        <form method="post" action='' name="login_form">
-                          <p><input type="text" class="span3" name="eid" id="email" placeholder="Email"></p>
-                          <p><input type="password" class="span3" name="passwd" placeholder="Password"></p>
-                          <p><button type="submit" class="btn btn-primary">Sign in</button>
-                            <a href="#">Forgot Password?</a>
-                          </p>
-                        </form>
-                      </div>
-                      <div class="modal-footer">
-                        New To MyWebsite.com?
-                        <a href="#" class="btn btn-primary">Register</a>
-                      </div>
-                    </div>
-                </div>
-                  </li>
+                 <li ><a href="/login">Login</a></li>
                  <li ><a href="#contact">Contact</a></li>
               </ul>
             </div>
