--- a/wsgi/myproject/template/include/nav.html
+++ b/wsgi/myproject/template/include/nav.html
@@ -28,6 +28,15 @@
                  <li class="active"><a href="#works">Home</a></li>
                  <li ><a href="#about">About</a></li>
                  <li ><a href="/login">Login</a></li>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
+
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      ...
+    </div>
+  </div>
+</div>
                  <li ><a href="#contact">Contact</a></li>
               </ul>
             </div>
