--- a/wsgi/myproject/template/include/nav.html
+++ b/wsgi/myproject/template/include/nav.html
@@ -29,7 +29,7 @@
                         <li class="active"><a href="#works">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="/login">Login</a></li>
-                        <li><a data-toggle="modal" data-target=".bs-example-modal-sm">Small
+                        <li><a href="#" data-toggle="modal" data-target=".bs-example-modal-sm">Small
                             modal</a>
                         </li>
                         <li><a href="#contact">Contact</a></li>
@@ -43,4 +43,24 @@
 
     </div>
 </div>
+<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog"
+                                 aria-labelledby="mySmallModalLabel">
+                    <div class="modal-dialog modal-sm">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title">Modal title</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>One fine body&hellip;</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close
+                                </button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 <!-- #Header Starts -->
